--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VisitKiliHub</title>
 
+     <!-- css Link -->
     <link rel="stylesheet" href="styles.css">
-    
 
     <!-- Bootstrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -90,7 +90,7 @@
     <!-- Home Section Start -->
     <div class="home">
         <div class="content">
-            <h5>Welcome To kilifi</h5>
+            <h5>Sustainable Blue Economy</h5>
             <h1>Visit <span class="changecontent"></span></h1>
             <p>Inspiring travel Journeys Awaits.</p>
             <a href="#book">Book Your Space</a>
@@ -199,7 +199,7 @@
               <img src="./imgs/Wildlife3.jpg" alt="">
               <div class="card-body">
                 <h3>Wildlife</h3>
-                <p>Have a closer look at rare animals  and birds you may not know the exist!</p>
+                <p>Have a closer look at rare animals  and birds you may not know they exist!</p>
                 <div class="star">
                   <i class="fa-solid fa-star checked"></i>
                   <i class="fa-solid fa-star checked"></i>
@@ -355,7 +355,7 @@
               <i class="fas fa-globe-asia"></i>
               <div class="card-body">
                 <h3>Climate Change </h3>
-                <p>We do awareness campaigns to  mitigate the adverse effects of climate change.</p>
+                <p>We do climate action awareness  campaigns to  mitigate the adverse effects of climate change & conserve our marine.</p>
               </div>
             </div>
 
