--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <img src="./imgs/Vascodagama1.jpg" alt="">
               <div class="card-body">
                 <h3>Vascodagama </h3>
-                <p>Dive into this captivating pillar with a wide scope marine view!</p>
+                <p>Dive into this captivating pillar with a wide scope of our marine view!</p>
                 <div class="star">
                   <i class="fa-solid fa-star checked"></i>
                   <i class="fa-solid fa-star checked"></i>
@@ -179,7 +179,9 @@
               <img src="./imgs/Occean Dive2.jpg" alt="">
               <div class="card-body">
                 <h3>Deep sea</h3>
-                <p>If you are a lover of deep see dive we have got you cobvered!</p>
+                <p>
+                  If you are a lover of deep sea_dive we have got you covered!
+                </p>
                 <div class="star">
                   <i class="fa-solid fa-star checked"></i>
                   <i class="fa-solid fa-star checked"></i>
@@ -465,7 +467,7 @@
 
           <div class="col-md-6 py-3 py-md-0">
             <h2>Who we are</h2>
-            <p>The leading digital platform for uniting, promoting and Unveiling the Wonders of Kilifi by Providing a seamless platform for travelers, adventurers, and culture enthusiasts to explore and connect with the rich tapestry of Kilifi. We strive to inspire discovery, foster sustainable tourism, and create unforgettable experiences that showcase the beauty and diversity of this coastal gem".</p>
+            <p>The leading digital ecotourism platform for uniting,conserving, promoting and Unveiling the Wonders of Kilifi County.Enabling travelers, adventurers, and culture enthusiasts to explore and connect with the rich tapestry of Kilifi County. We strive to inspire discovery, foster sustainable tourism,Blue economy and create unforgettable experiences that showcase the beauty and diversity of this coastal gem".</p>
             <button id="about-btn">Read More...</button>
           </div>
 
@@ -492,7 +494,7 @@
 
           <div class="col-md-6 py-3 py-md-0">
             <h2>we are Professionals</h2>
-            <p>We are a team of passionate and innovative individuals commited to inspire discovery, foster sustainable tourism, and create unforgettable experiences that showcase the beauty and diversity of Kilifi County".</p>
+            <p>We are a team of passionate and innovative individuals commited to inspire discovery, foster sustainable blue economy, and create unforgettable experiences that showcase the beauty and diversity of Kilifi County".</p>
             <button id="about-btn">Read More...</button>
           </div>
 
@@ -584,7 +586,7 @@
               <input type="text" class="form-control" placeholder="Your Email" required><br>
               <input type="country of Birth" class="form-control" placeholder="Country of Birth" required><br>
               <input type="country of residence" class="form-control" placeholder="Country of residence" required><br>
-              <input type="text" class="form-control" placeholder="needs" required><br>
+              <input type="text" class="form-control" placeholder="visit needs" required><br>
               <textarea class="form-control" rows="2" name="text" placeholder="How did you know about us"></textarea>
               <button id="about-btn">Signup</button>
             </form>
