added text to services

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               <i class="fas fa-hotel"></i>
               <div class="card-body">
                 <h3>Accomondation</h3>
-                <p>You have a variety of options to chose from.</p>
+                <p>You have a variety of options to chose from in a serene and secure environment.</p>
               </div>
             </div>
 
@@ -326,7 +326,7 @@
             <div class="card">
               <i class="fas fa-utensils"></i>
               <div class="card-body">
-                <h3>Food & Drinks</h3>
+                <h3>Cultural Promotion</h3>
                 <p>Taste the difference with our new menu .</p>
               </div>
             </div>
@@ -338,7 +338,9 @@
               <i class="fas fa-bullhorn"></i>
               <div class="card-body">
                 <h3>Safety Guides</h3>
-                <p>Our guides will ensure you you enjoy.</p>
+                <p>Our guides will ensure you you enjoy.
+                Equip your self with our latest travel giuide.
+                </p>
               </div>
             </div>
 
@@ -356,7 +358,7 @@
             <div class="card">
               <i class="fas fa-globe-asia"></i>
               <div class="card-body">
-                <h3>Climate Change </h3>
+                <h3>Climate Change & Marine Conservation </h3>
                 <p>We do climate action awareness  campaigns to  mitigate the adverse effects of climate change & conserve our marine.</p>
               </div>
             </div>
@@ -367,7 +369,7 @@
             <div class="card">
               <i class="fas fa-plane"></i>
               <div class="card-body">
-                <h3>Virtual Travel Booking</h3>
+                <h3>Virtual Booking</h3>
                 <p>Nothing to worry about, you can book online through our platform.</p>
               </div>
             </div>
