added text to services

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <i class="fas fa-utensils"></i>
               <div class="card-body">
                 <h3>Cultural Promotion</h3>
-                <p>Taste the difference with our new menu .</p>
+                <p>Taste the difference with our new menu;cultural dances & performances .</p>
               </div>
             </div>
 
@@ -339,7 +339,7 @@
               <div class="card-body">
                 <h3>Safety Guides</h3>
                 <p>Our guides will ensure you you enjoy.
-                Equip your self with our latest travel giuide.
+                Equip your self with our latest travel information.
                 </p>
               </div>
             </div>
@@ -358,8 +358,8 @@
             <div class="card">
               <i class="fas fa-globe-asia"></i>
               <div class="card-body">
-                <h3>Climate Change & Marine Conservation </h3>
-                <p>We do climate action awareness  campaigns to  mitigate the adverse effects of climate change & conserve our marine.</p>
+                <h3> Marine Conservation </h3>
+                <p>We do  awareness  campaigns to  mitigate the adverse effects of climate change & participate in marine conservation efforts.</p>
               </div>
             </div>
 
@@ -370,7 +370,7 @@
               <i class="fas fa-plane"></i>
               <div class="card-body">
                 <h3>Virtual Booking</h3>
-                <p>Nothing to worry about, you can book online through our platform.</p>
+                <p>Nothing to worry about, you can book online through our platform.Come & experience virtual reality guided tours</p>
               </div>
             </div>
 
