added text to adventures

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
               <i class="fas fa-hiking"></i>
               <div class="card-body">
                 <h3>Adventures</h3>
-                <p>Be ready to have fun & memorable experiences.</p>
+                <p>Be ready to have fun & memorable experiences.Discover the untold wonders of the world </p>
               </div>
             </div>
 
